--- a/public/chat.css
+++ b/public/chat.css
@@ -11,7 +11,7 @@ body {
 input#salon {
   color: whitesmoke;
   font-size: x-large;
-  background-color: #444444;
+  background-color: #333333;
   border-bottom-color: transparent;
   border-bottom: none !important;
   -webkit-box-shadow: none !important;
@@ -93,7 +93,7 @@ button.btn i {
 .a__message {
   width: 90%;
   padding: 20px 40px;
-  background-color: #404040;
+  background-color: #333333;
   margin: 0px 10px;
   border-radius: 5px;
   position: relative;
@@ -122,8 +122,8 @@ button.btn i {
   height: 50px;
   border-radius: 25px;
   margin-right: 10px;
-  -webkit-box-shadow: -2px 2px 5px rgba(0, 0, 0, 0.4);
-          box-shadow: -2px 2px 5px rgba(0, 0, 0, 0.4);
+  -webkit-box-shadow: -2px 2px 5px #050505;
+          box-shadow: -2px 2px 5px #050505;
 }
 
 li.a__message.myMessage {
