--- a/public/chat.scss
+++ b/public/chat.scss
@@ -13,7 +13,7 @@ body {
 input#salon {
     color: $second-color;
     font-size: x-large;
-    background-color: #444444;
+    background-color: lighten($primary-color, $amount: 20%);
     border-bottom-color: transparent;
     border-bottom: none !important;
     box-shadow: none !important;
@@ -36,13 +36,13 @@ button.btn {
     box-shadow: 1px 3px 5px 0px #fdfdfd38;
     border-radius: 1vw;
     background-color: #1d1d1d;
-    color: #ece6e6;
+    color: darken($second-color , $amount: 3%);
     font-weight: 700;
     padding: 0px 25px;
     height: 62px;
         &:hover, &:focus-within{
             background-color: aliceblue;
-            color: black;
+            color: $primary-color;
             box-shadow: inset 4px 4px 6px -1px $second-color, inset -4px -4px 6px -1px $second-color,
                 -0.5px -0.5px 0 $second-color, 0.5px 0.5px 0 $second-color, 0px 12px 10px -10px $second-color;
         }
@@ -97,7 +97,7 @@ button.btn {
         height: 50px;
         border-radius: 25px;
         margin-right: 10px;
-        box-shadow: -2px 2px 5px rgba(0, 0, 0, 0.4);
+        box-shadow: -2px 2px 5px lighten($primary-color, $amount: 1%)
     }
 }
 
