--- a/public/chat.css
+++ b/public/chat.css
@@ -16,13 +16,11 @@ input#salon {
   border-bottom: none !important;
   -webkit-box-shadow: none !important;
           box-shadow: none !important;
-  text-transform: uppercase;
 }
 
 input#salon:focus, input#salon:active {
   color: whitesmoke;
   font-size: x-large;
-  text-transform: uppercase;
   border-bottom-color: transparent;
 }
 
@@ -139,6 +137,7 @@ li.a__message.myMessage {
   -webkit-box-align: end;
       -ms-flex-align: end;
           align-items: flex-end;
+  margin-left: auto;
 }
 
 .message_input {
