--- a/public/chat.scss
+++ b/public/chat.scss
@@ -17,11 +17,9 @@ input#salon {
     border-bottom-color: transparent;
     border-bottom: none !important;
     box-shadow: none !important;
-    text-transform: uppercase;
         &:focus, &:active{
             color: $second-color;
             font-size: x-large;
-            text-transform: uppercase;
             border-bottom-color: transparent;
         }
 }
@@ -107,6 +105,7 @@ li.a__message.myMessage{
     display: flex;
     flex-direction: column;
     align-items: flex-end;
+    margin-left: auto;
 }
 
 .message_input {
