--- a/public/chat.scss
+++ b/public/chat.scss
@@ -17,6 +17,7 @@ input#salon {
     border-bottom-color: transparent;
     border-bottom: none !important;
     box-shadow: none !important;
+    text-transform: uppercase !important;
         &:focus, &:active{
             color: $second-color;
             font-size: x-large;
@@ -84,6 +85,7 @@ button.btn {
     margin: 30px 15px;
     box-shadow: 0px 3px 10px $primary-color;
     width: fit-content;
+    max-width: 50%;
 }
 
 .message__user__info {
