--- a/public/chat.css
+++ b/public/chat.css
@@ -14,6 +14,7 @@ body {
 @media screen and (max-width: 600px) {
   #app {
     width: 100%;
+    height: 90vh;
   }
   .row.container.formSalon {
     margin: 0 auto;
@@ -42,7 +43,7 @@ body {
     width: -webkit-fit-content;
     width: -moz-fit-content;
     width: fit-content;
-    max-width: 90%;
+    max-width: 90% !important;
   }
 }
 
@@ -145,6 +146,7 @@ button.btn i {
   width: -moz-fit-content;
   width: fit-content;
   max-width: 50%;
+  word-break: break-word;
 }
 
 .message__user__info {
