--- a/public/chat.scss
+++ b/public/chat.scss
@@ -17,6 +17,7 @@ body {
 @include mobile-screen{
     #app{
         width: 100%;
+        height: 90vh;
     }
     .row.container.formSalon{
         margin: 0 auto;
@@ -35,7 +36,7 @@ body {
         margin: 30px 15px;
         box-shadow: 0px 3px 10px $primary-color;
         width: fit-content;
-        max-width: 90%;
+        max-width: 90% !important;
     }
 }
 
@@ -117,6 +118,7 @@ button.btn {
     box-shadow: 0px 3px 10px $primary-color;
     width: fit-content;
     max-width: 50%;
+    word-break: break-word;
 }
 
 .message__user__info {
